# MigrationTesting

./: README.md  alembic.ini  docker-compose-local.yml  pyproject.toml
.github/workflows/: test_migrate.yaml
src/: __main__.py  decorators.py  loggers.py  settings.py  utils.py
src/database/migrations/: __init__.py  env.py  main.py
src/database/migrations/versions/: 2024_12_05_172317-initial.py  2024_12_05_173344-add_password.py  2024_12_06_155947-added_posts_table.py  2024_12_09_094112-added_posts.py  2024_12_09_100614-added_active_flag.py  2024_12_09_102617-added_countries.py
src/database/models/: __init__.py  base.py  geo.py  posts.py  users.py
tests/: conftest.py
tests/database/: test_migrations.py
tests/fixtures/: database.py
